syntax = "proto3";

option csharp_namespace = "AElf.Contracts.SideChain";

import "hash.proto";

message ParentChainBlockRootInfo
{
    uint64 Height = 1;
    Hash SideChainBlockHeadersRoot = 2;
    Hash SideChainTransactionsRoot = 3;
    Hash ChainId = 4;
}
